<resources>
    <string name="app_name">CallForwardingStatus</string>
    <string name="app_widget_description">Show call forwarding status</string>
    <string name="ToggleCallForwarding">Toggle call forwarding</string>
    <string name="DescriptionMain">Enter a phone number which you would like to forward your calls to.
    It is possible to store up to three numbers to quickly switch between them.</string>
    <string name="Phone_number1">Phone number 1</string>
    <string name="Phone_number2">Phone number 2</string>
    <string name="Phone_number3">Phone number 3</string>
    <string name="save_row_1">Save row 1</string>
    <string name="save_row_2">Save row 2</string>
    <string name="save_row_3">Save row 3</string>
    <string name="delete_row_1">Delete row 1</string>
    <string name="delete_row_2">Delete row 2</string>
    <string name="delete_row_3">Delete row 3</string>
    <string name="Radio_row_1">1</string>
    <string name="Radio_row_2">2</string>
    <string name="Radio_row_3">3</string>
    <string name="CallForwardingActive">Call Forwarding Active</string>
    <string name="CallForwardingInactive">Call Forwarding Inactive</string>
    <string name="PhoneNumberSaved">Phone number saved</string>
    <string name="NoNumber">No phone number has been set</string>
    <string name="NotificationTitle">Call Forwarding service</string>
    <string name="setupCallForwarding">Please wait toggle call forwarding in progress</string>
    <string name="NotificationText">Service Running</string>
    <string name="settings">Settings</string>
    <string name="ChoseColor">Chose a Background Color for your Widget</string>
    <string name="ChoseTextColor">Set a Text Color for your Widget</string>
    <string name="ChoseColorSpinner">Chose a Background Color for your Widget Spinner</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="alpha">Alpha</string>
    <string name="callForwarding">CallForwarding</string>
    <string name="applyColor">Apply Color</string>
    <string name="select_sim">Select Simcard</string>
    <string name="notification_channel_name">CallForwarding</string>
    <string name="allow_boot">Allow Start on Boot</string>
</resources>